# hv-anndata

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  biome.jsonc  pyproject.toml
.github/workflows/: build.yaml  ci.yml
docs/: conf.py  example.ipynb  index.ipynb
docs/_templates/autosummary/: class.rst
docs/api/: .gitignore  hv_anndata.AutoCompleteMultiChoice.rst  hv_anndata.GeneGroupSelector.rst  hv_anndata.accessors.rst  hv_anndata.plotting.scanpy.draw_graph.rst  hv_anndata.plotting.scanpy.embedding_density.rst  hv_anndata.plotting.scanpy.heatmap.rst  hv_anndata.plotting.scanpy.highest_expr_genes.rst  hv_anndata.plotting.scanpy.highly_variable_genes.rst  hv_anndata.plotting.scanpy.matrixplot.rst  hv_anndata.plotting.scanpy.ranking.rst  hv_anndata.plotting.scanpy.rst  hv_anndata.plotting.scanpy.scatter.rst  hv_anndata.plotting.scanpy.scrublet_score_distribution.rst  hv_anndata.plotting.scanpy.stacked_violin.rst  hv_anndata.plotting.scanpy.tracksplot.rst  hv_anndata.plotting.scanpy.violin.rst  hv_anndata.plotting.utils.highest_expr_genes.rst  hv_anndata.plotting.utils.rst  index.rst
docs/examples/: AnnData.ipynb  Violin.ipynb
docs/examples/scanpy/: Basic.ipynb  Preprocessing.ipynb  Tools.ipynb  index.rst
docs/ext/: has_attr_test.py  paramdoc.py
docs/presentations/: index.md  scverse-introduction.ipynb
examples/: AnnData.ipynb  Violin.ipynb
scripts/: scanpy-plots.py
src/hv_anndata/: __init__.py  _ref.py  accessors.py  clustermap.py  components.py  data.py  featuremap.py  interface.py  manifoldmap.py  plotting.py  scanpy.py
src/hv_anndata/plotting/: __init__.py  clustermap.py  dotmap.py  labeller.py  manifoldmap.py  scanpy.py  utils.py
src/hv_anndata/plotting/scanpy/: __init__.py  _core.py  _pp.py  _tl.py
tests/: conftest.py  test_accessors.py  test_basic.py  test_clustermap.py  test_components.py  test_interface.py  test_manifold.py  test_plotting.py
tests/plotting/: conftest.py  test_clustermap.py  test_manifold.py  test_scanpy.py
tests/test_plotting/: test_manifold.py
