[build-system]
build-backend = "hatchling.build"

requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "hv-anndata"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "holoviews",
  "numpy",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
installer = "uv"
[tool.hatch.envs.docs]
dependencies = [
  # jupyter
  "ipykernel",
  "ipywidgets",
  # data stuff
  "scanpy",
  "numba>=0.60",
  # visualization
  "plotly",
]
