[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-docstring-description", "hatch-vcs", "hatchling" ]

[project]
name = "hv-anndata"
readme = "README.md"
license = "BSD-3-Clause"
authors = [ { name = "Philipp A.", email = "flying-sheep@web.de" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "description", "version" ]
dependencies = [
  "anndata",
  "bokeh",
  "datashader",
  "fast-array-utils",
  "holoviews>=1.21rc0",
  "numpy",
  "pandas",
  "panel",
  "panel-material-ui>=0.4rc1",
  "param",
]

[tool.hatch]
envs.default.dependencies = [
  "ipykernel",
  "anndata @ git+https://github.com/scverse/anndata.git",
]
envs.default.installer = "uv"
envs.default.python = "3.13"
envs.docs.scripts.build = "sphinx-build -b html docs docs/_build/html -W {args}"
envs.docs.scripts.open = "python -m webbrowser {args:docs/_build/html/index.html}"
envs.docs.scripts.clean = "git clean -fdX -- {args:docs}"
envs.docs.scripts.install-kernel = "python -m ipykernel install --user --name=hv-anndata --display-name=hv-anndata"
envs.docs.dependencies = [
  "furo",
  "holoviews>=1.22",
  "ipykernel",
  "ipywidgets",
  "jupyter-bokeh",
  "myst-nb",
  "pooch",
  "plotly",
  "scanpy[scrublet]",
  "scanpydoc",
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-exec-jupyter[holoviews] @ git+https://github.com/flying-sheep/sphinx-exec-jupyter.git",
  "sphinx-design",
  "sphinx-issues",
]
envs.hatch-test.dependencies = [
  "anndata @ git+https://github.com/scverse/anndata.git",
  # for VS Code’s coverage function (not needed for `hatch test -c`)
  "pytest-cov",
  "nbformat-types",
  "scanpy",
]
metadata.hooks.docstring-description = {}
version.source = "vcs"

[tool.ruff]
format.preview = true
lint.select = [ "ALL" ]
lint.ignore = [
  "B019",   # functools.cache is fine to use
  "C408",   # dict(...) calls are good
  "COM812", # Incompatible with formatter
  "CPY001", # No copyright notice necessary
  "D105",   # magic methods are usually self-explanatory
  "D203",   # 0 instead of 1 blank lines before class docstring
  "D213",   # Multi-line docstring summary should start at the first instead of second line
  "DOC501", # No need to document obvious exceptions like TypeError or ValueError
  "FIX002", # TODOs are fine
  "ISC001", # Incompatible with formatter
  "PD011",  # We actually do want `.values` give us a numpy or extension array
  "S404",   # Using the subprocess module is fine
  "S603",   # We don’t want to use `subprocess.run(shell=True)`
  "S607",   # We don’t run commands with untrusted input
  "TD002",  # No need to assign TODOs to some person
]
lint.per-file-ignores."**/*.ipynb" = [
  "ANN",  # missing annotations in notebooks are OK
  "D",    # Missing docstrings in notebooks are OK
  "ERA",  # commented-out code in notebooks is fine
  "I002", # Missing `from __future__ import annotations` is fine
  "T201", # print is fine
]
lint.per-file-ignores."docs/**/*.py" = [
  "INP001", # __init__.py
]
lint.per-file-ignores."scripts/*" = [
  "INP001", # __init__.py
  "T201",   # print is fine
]
lint.per-file-ignores."src/hv_anndata/__main__.py" = [
  "T201", # print is fine
]
lint.per-file-ignores."tests/*" = [
  "D",       # Missing docstrings in tests are OK
  "INP001",  # __init__.py should not be in tests
  "PLC1901", # comparing to empty string in tests is clearer
  "PLR0917", # tests and fixures don’t have positional arguments
  "PLR2004", # magic-value-comparison
  "RUF018",  # assert with := is fine
  "S101",    # Use of assert
  "SLF",     # private member access in tests is fine
]
lint.allowed-confusables = [ "×", "’" ]
lint.flake8-type-checking.exempt-modules = []
lint.flake8-type-checking.strict = true
lint.isort.known-first-party = [ "hv_anndata" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pylint.allow-dunder-method-names = [ "__panel__" ]
lint.pylint.max-args = 8
lint.pylint.max-positional-args = 4
lint.pydoclint.ignore-one-line-docstrings = true

[tool.pytest]
strict = true
addopts = [ "--import-mode=importlib", "--strict-markers" ]
filterwarnings = [
  "error",
  # add ignore filters here if something fails in 3rd party dependencies
]

[tool.coverage]
run.branch = true
run.omit = []
run.parallel = true
run.source_pkgs = [ "hv_anndata", "tests" ]
paths.session_info2 = [ "src/hv_anndata", "*/hv-anndata/src/hv_anndata" ]
paths.tests = [ "tests", "*/hv-anndata/tests" ]
report.exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pytest\\.fail(.*)",
]
